--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -122,7 +122,7 @@ input[type="tel"] {
 }
 
 input[type="radio"] {
-    width: 10%;
+    width: 50px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -144,6 +144,12 @@ input[type="submit"]:hover {
     background-color: #c55c05;
 }
 
+.helper-text {
+    display: none;
+    font-size: .8rem;
+    color: darkred;
+  }
+
 /* estilos dinâmicos */
 .required-popup::after {
     content: "*Campo obrigatório";
@@ -156,12 +162,6 @@ input[type="submit"]:hover {
     width: auto;
     display: block;
     background-color: #202020;
-  }
-
-  .helper-text {
-    display: none;
-    font-size: .8rem;
-    color: darkred;
   }
 
   input.error {
