--- a/css/login.css
+++ b/css/login.css
@@ -119,7 +119,7 @@ input[type="password"] {
     box-sizing: border-box;
 }
 
-input[type="submit"] {
+button[type="submit"] {
     width: 100%;
     padding: 12px;
     background-color: #ff3909;
